# cislunar-optical-nav

./: .gitignore  README.md  REPRODUCING.md  make_report.py  pyproject.toml  reproduce_paper.py  requirements-lock.txt  requirements.txt  run.sh  run_ablation.py  run_coupling.py  run_experiment.py  run_mc.py
docs/: analysis_drivers.md  experiment_manifest.md  spice_vs_cr3bp.md
paper_artifacts/: README.md
reports/: ~$cislunar-opnav-deck-v2.pptx
scripts/: 00_fetch_periodic_orbits.py  01_propagate_cr3bp.py  01_propagate_jpl_seed_spice.py  02_targeting_demo.py  03_simulate_bearings.py  04_pixel_bearings_demo.py  05_camera_feed_demo.py  06_ekf_diagnostics.py  06_mc_cisopt_demo.py  06_midcourse_ekf_correction.py  06_monte_carlo.py  06_q_acc_sweep.py  06_sensitivity.py  06_sensitivity_mc.py  06e_fine_tune.py  06f_compare_truth_modes.py  06g_phase_d_headline.py  06h_scaling_vs_tf.py  06i_tolerance_sweep.py  06j_covariance_ellipses.py  06k_p0_sensitivity.py  06l_multi_revolution.py  06m_parallax_vs_range.py  06n_landmarks.py  06o_pointing_bias_lag.py  06p_measurement_delay.py  06q_attitude_noise_sweep.py  06r_landmarks_under_pointing_degradation.py  06s_estimator_ablation.py  06t_success_ecdf_central.py  07_active_tracking.py  08_blob_centroid_demo.py  08_feature_tracking_demo.py  08_moon_blob_demo.py  09_hero_visual.py  09b_motivation_fov_inset.py  10_pipeline_diagram.py  11_phase01_slide_visual.py  12_bearing_concept_visual.py  12b_bearing_ambiguity_video.py  (+21 more)
src/cisopt/: __init__.py  (+2 more)
tests/: test_paper_artifacts_present.py  test_paper_constants.py  test_run_case_smoke.py
(+138 files in other folders)
